// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-app-onboard - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "End-to-end orchestrator: from an existing app or GitHub repo to running Azure deployment with cost estimates and pre-deploy approval. Analyzes your app, auto-detects the right Azure services, scaffolds infrastructure code, and deploys — tailored to your app, not a template. Handles moving existing apps to Azure without rewriting or with minimal changes, including non-Azure SDK swaps (AWS/GCP). WHEN: bring your app to Azure, plan my app, cost to run, is my code ready to deploy, deploy my app to the cloud, deploy all my services, what Azure services do I need, plan my Azure deployment, deploy my new app to Azure, one-click deploy, I have an app and want it on Azure, migrate my app to Azure, help me get started, build an app, no code yet, starter project. DO NOT USE FOR: running azd up (use azure-deploy), optimizing existing costs (use azure-cost), code readiness checks only (use azure-app-onboard-prereq).",
  "extractedKeywords": [
    "aks",
    "analyzes",
    "app",
    "approval",
    "apps",
    "auto-detects",
    "azure",
    "azure-app-onboard-prereq",
    "azure-cost",
    "azure-deploy",
    "bicep",
    "bring",
    "build",
    "changes",
    "checks",
    "cli",
    "cloud",
    "code",
    "cost",
    "costs",
    "deploy",
    "deployment",
    "deploys",
    "diagnostic",
    "end-to-end",
    "estimates",
    "existing",
    "from",
    "github",
    "handles",
    "have",
    "help",
    "identity",
    "including",
    "infrastructure",
    "kubernetes",
    "mcp",
    "migrate",
    "minimal",
    "moving",
    "need",
    "non-azure",
    "onboard",
    "one-click",
    "only",
    "optimizing",
    "orchestrator",
    "plan",
    "pre-deploy",
    "project",
    "rbac",
    "readiness",
    "ready",
    "repo",
    "rewriting",
    "right",
    "running",
    "scaffolds",
    "security",
    "services",
    "started",
    "starter",
    "swaps",
    "tailored",
    "template",
    "terraform",
    "validation",
    "want",
    "what",
    "when",
    "with",
    "without",
    "your",
  ],
  "name": "azure-app-onboard",
}
`;

exports[`azure-app-onboard - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "aks",
  "analyzes",
  "app",
  "approval",
  "apps",
  "auto-detects",
  "azure",
  "azure-app-onboard-prereq",
  "azure-cost",
  "azure-deploy",
  "bicep",
  "bring",
  "build",
  "changes",
  "checks",
  "cli",
  "cloud",
  "code",
  "cost",
  "costs",
  "deploy",
  "deployment",
  "deploys",
  "diagnostic",
  "end-to-end",
  "estimates",
  "existing",
  "from",
  "github",
  "handles",
  "have",
  "help",
  "identity",
  "including",
  "infrastructure",
  "kubernetes",
  "mcp",
  "migrate",
  "minimal",
  "moving",
  "need",
  "non-azure",
  "onboard",
  "one-click",
  "only",
  "optimizing",
  "orchestrator",
  "plan",
  "pre-deploy",
  "project",
  "rbac",
  "readiness",
  "ready",
  "repo",
  "rewriting",
  "right",
  "running",
  "scaffolds",
  "security",
  "services",
  "started",
  "starter",
  "swaps",
  "tailored",
  "template",
  "terraform",
  "validation",
  "want",
  "what",
  "when",
  "with",
  "without",
  "your",
]
`;
